feat: update docs. Bugfix
